--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "food bank check in system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "docker run -p 50000:8080 -d jtnorris/nwa-foodbank-check-in-system",
+    "build": "docker build . -t jtnorris/nwa-foodbank-check-in-system "
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/JackTNorris/nwa-foodbank-check-in-system#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "twilio": "^3.83.1"
   },
   "type": "module"
